# From-Theory-to-Practice-Building-a-Multi-Agent-Research-System-with-MCP

./: README.md  config.py  main.py  pyproject.toml
mcp_client/: client.py  main.py
mcp_server/: web_server.py
